--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@thirdweb-dev/react": "^3.14.37",
     "@thirdweb-dev/sdk": "3.10.21",
     "@thirdweb-dev/wallets": "^0.2.26",
+    "@types/lodash": "^4.17.4",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
