--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-jazzicon": "^1.0.4",
     "react-use": "^17.4.0",
     "sharp": "^0.32.6",
+    "valhalla-erc20": "^1.23.0",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
